--- a/Final.html
+++ b/Final.html
@@ -18,6 +18,8 @@
    <h3>Derjiling</h3>
    Guider:Soumik Mondal
    <p>Darjeeling is a town in India's West Bengal state, in the Himalayan foothills. Once a summer resort for the British Raj elite, it remains the terminus of the narrow-gauge Darjeeling Himalayan Railway, or “Toy Train,” completed in 1881. It's famed for the distinctive black tea grown on plantations that dot its surrounding slopes. Its backdrop is Mt. Kanchenjunga, among the world’s highest peaks.Darjeeling is famous throughout the world for the tea it grows and the great view of Kanchenjunga range of mountains that it offers. ... It is also known for its richness in cultural & natural heritage and the famous toy train that has been declared a UN heritage.
-</p> 
+</p>
+<h3>Puri</h3>
+<p>Puri Beach or the Golden beach is a beach in the city of Puri in the state of Odisha, India. It is on the shore of the Bay of Bengal. It is known for being a tourist attraction and a Hindu sacred place.Puri Beach or the Golden beach is a beach in the city of Puri in the state of Odisha, India. It is on the shore of the Bay of Bengal. It is known for being a tourist attraction and a Hindu sacred place.</p> 
 </body>
 </html>
